--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,6 +42,11 @@ $navbar-default-bg: #080923;
   font-size: 1.7em;
 }
 
+.article-meta-details{
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
 .article-actions{
   border-top:1px solid #eaeaea;
   padding-top:5px;
