--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,11 @@ $navbar-default-bg: #080923;
   padding-bottom: 15px;
 }
 
+.listing {
+  list-style: none;
+  padding: 0;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
